# OpenModScan

./: .gitattributes  .gitignore  LICENSE.md  README.md  README.md.in  ROADMAP.md  build-flatpak.sh  build.ps1  build.sh  install.sh
omodscan/: CMakeLists.txt  ansimenu.cpp  ansimenu.h  ansiutils.h  appsettings.h  asciiutils.h  byteorderutils.h  connectiondetails.h  datasimulator.cpp  datasimulator.h  dialogmsgparser.cpp  dialogmsgparser.h  dialogmsgparser.ui  dialogrtuscanner.cpp  dialogrtuscanner.h  dialogrtuscanner.ui  displaydefinition.h  enums.h  floatutils.h  fontutils.h  formatutils.h  formmodsca.cpp  formmodsca.h  formmodsca.ui  htmldelegate.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbusclient.cpp  modbusclient.h  modbusclientprivate.cpp  modbusclientprivate.h  modbusdataunit.cpp  modbusdataunit.h  modbusdevice.h  modbusexception.h  modbusfunction.h  modbuslimits.h  modbuspduinfo.h  (+36 more)
omodscan/controls/: addressbasecombobox.cpp  addressbasecombobox.h  booleancombobox.h  bytelistlineedit.cpp  bytelistlineedit.h  bytelisttextedit.cpp  bytelisttextedit.h  byteordercombobox.cpp  byteordercombobox.h  clickablelabel.cpp  codepagecombobox.cpp  codepagecombobox.h  connectioncombobox.cpp  connectioncombobox.h  customframe.cpp  customframe.h  customlineedit.cpp  flowcontroltypecombobox.cpp  flowcontroltypecombobox.h  formattedspinbox.cpp  functioncodecombobox.cpp  functioncodecombobox.h  historycombobox.h  hostscombobox.h  ipaddresslineedit.cpp  ipaddresslineedit.h  mainstatusbar.cpp  mainstatusbar.h  modbuslogwidget.cpp  modbuslogwidget.h  modbusmessagewidget.cpp  modbusmessagewidget.h  numericlineedit.cpp  numericlineedit.h  outputwidget.cpp  outputwidget.h  outputwidget.ui  paritytypecombobox.cpp  paritytypecombobox.h  pointtypecombobox.cpp  (+6 more)
omodscan/dialogs/: dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogaddressscan.cpp  dialogaddressscan.h  dialogaddressscan.ui  dialogautosimulation.cpp  dialogautosimulation.h  dialogautosimulation.ui  dialogautostart.cpp  dialogautostart.h  dialogautostart.ui  dialogcoilsimulation.cpp  dialogcoilsimulation.ui  dialogconnectiondetails.cpp  dialogconnectiondetails.h  dialogconnectiondetails.ui  dialogdisplaydefinition.cpp  dialogdisplaydefinition.h  dialogdisplaydefinition.ui  dialogforcemultiplecoils.cpp  dialogforcemultiplecoils.h  dialogforcemultiplecoils.ui  dialogforcemultipleregisters.cpp  dialogforcemultipleregisters.h  dialogforcemultipleregisters.ui  dialogmaskwriteregiter.cpp  dialogmaskwriteregiter.h  dialogmaskwriteregiter.ui  dialogmodbusscanner.cpp  dialogmodbusscanner.h  dialogmodbusscanner.ui  dialogmsgparser.cpp  dialogmsgparser.h  dialogmsgparser.ui  dialogprintsettings.cpp  dialogprintsettings.h  dialogprintsettings.ui  dialogprotocolselections.cpp  dialogprotocolselections.ui  (+20 more)
omodscan/modbusinfo/: modbuspduinfo.cpp  modbuspduinfo.h  readcoils.h
omodscan/modbusmessages/: diagnostics.h  getcommeventcounter.h  getcommeventlog.h  maskwriteregister.h  modbusmessage.cpp  modbusmessage.h  modbusmessages.h  readcoils.h  readdiscreteinputs.h  readexceptionstatus.h  readfifoqueue.h  readfilerecord.h  readholdingregisters.h  readinputregisters.h  readwritemultipleregisters.h  reportserverid.h  writefilerecord.h  writemultiplecoils.h  writemultipleregisters.h  writesinglecoil.h  writesingleregister.h
omodscan/res/: license.txt
omodscan/translations/: omodscan_cn.qm  omodscan_cn.ts  omodscan_ru.qm  omodscan_ru.ts  omodscan_zh.qm  omodscan_zh.ts  omodscan_zh_CN.qm  omodscan_zh_CN.ts  omodscan_zh_TW.qm  omodscan_zh_TW.ts
src/: CMakeLists.txt  ansimenu.cpp  ansimenu.h  byteorderutils.h  cmdlineparser.cpp  cmdlineparser.h  connectiondetails.h  datadelegate.cpp  datadelegate.h  datasimulator.cpp  datasimulator.h  displaydefinition.h  enums.h  fontutils.h  formatutils.h  formmodsca.cpp  formmodsca.h  formmodsca.ui  htmldelegate.cpp  htmldelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbusclient.cpp  modbusclient.h  modbusclientprivate.cpp  modbusclientprivate.h  modbusdataunit.cpp  modbuslimits.h  modbusreply.h  modbusrtuclient.cpp  modbusrtuclient.h  modbusrtuscanner.cpp  modbusrtuscanner.h  modbusrtutcpclient.cpp  modbusrtutcpclient.h  modbusrtutcpscanner.h  modbusscanner.h  modbussimulationparams.h  (+25 more)
src/cmake/: NormalizeUiEnums.cmake
src/controls/: aboutdatawidget.cpp  aboutdatawidget.h  bitpatterncontrol.cpp  bitpatterncontrol.h  bitpatterncontrol.ui  booleancombobox.cpp  bytelisttextedit.cpp  byteordercombobox.cpp  checkablegroupbox.cpp  checkablegroupbox.h  clickablelabel.h  coloredpushbutton.cpp  coloredpushbutton.h  coloredtoolbutton.cpp  coloredtoolbutton.h  customlineedit.h  formattedspinbox.h  functioncodecombobox.cpp  functioncodecombobox.h  hexviewbutton.cpp  hexviewbutton.h  historycombobox.cpp  hostscombobox.cpp  mainstatusbar.cpp  modbuslogwidget.cpp  modbuslogwidget.h  modbusprotocolscombobox.cpp  modbusprotocolscombobox.h  numericcombobox.cpp  numericcombobox.h  numericlineedit.cpp  numericlineedit.h  outputwidget.cpp  outputwidget.h  outputwidget.ui  paritytypecombobox.cpp  paritytypecombobox.h  pointtypecombobox.h  simulationmodecombobox.h  statisticwidget.cpp  (+3 more)
src/dialogs/: dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogaddressscan.cpp  dialogaddressscan.h  dialogaddressscan.ui  dialogautosimulation.cpp  dialogautosimulation.ui  dialogautostart.cpp  dialogautostart.h  dialogautostart.ui  dialogcoilsimulation.cpp  dialogcoilsimulation.h  dialogcoilsimulation.ui  dialogconnectiondetails.cpp  dialogconnectiondetails.h  dialogconnectiondetails.ui  dialogdisplaydefinition.cpp  dialogdisplaydefinition.h  dialogdisplaydefinition.ui  dialogforcemultiplecoils.cpp  dialogforcemultiplecoils.h  dialogforcemultiplecoils.ui  dialogforcemultipleregisters.cpp  dialogforcemultipleregisters.h  dialogforcemultipleregisters.ui  dialogmaskwriteregiter.cpp  dialogmaskwriteregiter.h  dialogmaskwriteregiter.ui  dialogmodbusscanner.cpp  dialogmodbusscanner.h  dialogmodbusscanner.ui  dialogmsgparser.cpp  dialogmsgparser.h  dialogmsgparser.ui  dialogprintsettings.cpp  dialogpulsemode.h  (+22 more)
(+133 files in other folders)
